--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,8 @@
 {
   "tasks": {
-    "build": "cargo build --release"
+    "build": "cargo build --release",
+    "example:classification:iris": "deno run -A --unstable examples/iris/test.ts",
+    "example:classification:spam": "deno run -A --unstable examples/spam/test.ts",
+    "example:regression:linear": "deno run -A --unstable examples/linear/test.ts"
   }
 }
