--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "./rust/Cargo.toml",
         "./rust/Cargo.toml",
         "./rust/Cargo.toml",
-        "./rust/Cargo.toml"
+        "./rust/Cargo.toml",
+        ".\\rust\\Cargo.toml"
     ],
     "deno.enable": true,
     "deno.unstable": true
