--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,3 +11,5 @@ crate-type = ["cdylib"]
 [dependencies]
 nalgebra = "0.32.3"
 rand = "0.8.5"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
