--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
-        "./rust/Cargo.toml",
-        "./rust/Cargo.toml",
-        "./rust/Cargo.toml",
-        "./rust/Cargo.toml",
-        ".\\rust\\Cargo.toml",
-        ".\\rust\\Cargo.toml",
-        ".\\rust\\Cargo.toml"
+        "./crates/classy/Cargo.toml",
     ],
     "deno.enable": true,
     "deno.unstable": true
