Revert "use ndarray instead of nalgebra"
This reverts commit ad3b8e3a5abf7886a67315acd2ec81ba2c64097c.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "rust-analyzer.linkedProjects": [
-        "./crates/classy/Cargo.toml",
+        "./rust/Cargo.toml",
+        "./rust/Cargo.toml",
+        "./rust/Cargo.toml",
+        "./rust/Cargo.toml",
+        ".\\rust\\Cargo.toml",
+        ".\\rust\\Cargo.toml",
+        ".\\rust\\Cargo.toml"
     ],
     "deno.enable": true,
     "deno.unstable": true
