--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@lala/classy",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "exports": "./mod.ts",
   "exclude": [
     "crates",
@@ -9,7 +9,8 @@
     ".vscode",
     "Cargo.toml",
     "Cargo.lock",
-    "target"
+    "target",
+    ".gitignore"
   ],
   "tasks": {
     "build": "cargo build --release"
